[metadata]
name = fms_yaml_tools
version = 0.0.1
author = Uriel Ramirez, Eric Stofferahn
author_email = Uriel.Ramirez@NOAA.Gov, Eric.Stofferahn@NOAA.Gov
description = Suite of tools to convert ASCII FMS table files to YAML for use in FMS-based models
long_description = file: README.md
long_description_content_type = text/markdown
# Pick an OSI approved license - https://opensource.org/licenses
license_files = LICENSE.md
# Classifiers can be found at https://pypi.org/classifiers/
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
url = https://github.com/NOAA-GFDL/fms_yaml_tools
project_urls = 
    Bug Tracker = https://github.com/NOAA-GFDL/fms_yaml_tools/issues

[options]
packages = 
    fms_yaml_tools/data_table
    fms_yaml_tools/diag_table
    fms_yaml_tools/field_table
# scripts =
#     data_table/data_table_to_yaml.py
#     diag_table/diag_table_to_yaml.py
#     diag_table/is_valid_diag_table_yaml.py
#     data_table/is_valid_data_table_yaml.py
#     data_table/data_table_to_yaml.py
#     field_table/field_to_yaml.py
install_requires = 
    pyyaml

[options.entry_points]
console_scripts = 
    data_table_to_yaml = fms_yaml_tools.data_table.data_table_to_yaml:main
    diag_table_to_yaml = fms_yaml_tools.diag_table.diag_table_to_yaml:main
    is_valid_diag_table_yaml = fms_yaml_tools.diag_table.is_valid_diag_table_yaml:main
    is_valid_data_table_yaml = fms_yaml_tools.data_table.is_valid_data_table_yaml:main
    field_to_yaml = fms_yaml_tools.field_table.field_to_yaml:main
